--- a/termProject.html
+++ b/termProject.html
@@ -9,7 +9,7 @@
 <body>
     <div id="mySidenav" class=" sidenav">
         <a href="javascrip:void(0)" class="closebtn" onclick="CloseNav()">&times;</a>
-        <a href="animation.html">Shark Adventure</a>
+        <a href="Sharks.html">Shark Adventure</a>
         <a href="memory.html">Memory Game</a>
         <a href="interactive.html">Interactive Story Game</a>
         <a href="info.txt">Website Information</a>
