--- a/termProject.html
+++ b/termProject.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="viewport" content="width=device-width, initial-scale=1.0">
     <title>Term Project Game Page</title>
     <link href="css/termProject.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
@@ -11,7 +12,7 @@
         <a href="javascrip:void(0)" class="closebtn" onclick="CloseNav()">&times;</a>
         <a href="Sharks.html">Shark Adventure</a>
         <a href="memory.html">Memory Game</a>
-        <a href="interactive.html">Interactive Story Game</a>
+        <a href="ImageMove.html">Interactive Image Game</a>
         <a href="info.txt">Website Information</a>
     </div>
     <div id="main">
